Stop 'remember me' from wrapping on the login form

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -440,6 +440,7 @@ header.topbar
     .remember-me-label    
       line-height: 24px 
       float: left
+      width: 100px
   #forgot_link
     float: right
     margin: 5px 5px 0 0
